// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LskBaseError should match snapshot: content in default slot 1`] = `
<div class="red--text font-weight-bold">
  <div>
    DEFAULT
  </div>
</div>
`;

exports[`LskBaseError should match snapshot: no content in default slot 1`] = `
<div class="red--text font-weight-bold">
</div>
`;
